--- a/TicTacToe.htm
+++ b/TicTacToe.htm
@@ -7,6 +7,11 @@
     <script src="TicTacToe.js" type="text/javascript"></script>
 </head>
 <body>
+	<script>
+		$(document).ready(function () {
+			$("#test").playxo();
+		});
+	</script>
     <div id="test">
     </div>
 </body>
